apps/bgd/overlays/bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demo
  name: demo
  namespace: demo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: demo
    weight: 100
